AC_INIT(babel/thai.dtx)
AM_INIT_AUTOMAKE(thailatex, 0.4.6svn, thep@linux.thai.net)

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_SED

AC_CHECK_PROGS(LATEX,latex,no)
if test "x$LATEX" = "xno" ; then
  AC_MSG_ERROR([You need latex (from texlive distribution)])
fi
AC_CHECK_PROGS(PDFLATEX,pdflatex,no)
if test "x$PDFLATEX" = "xno" ; then
  AC_MSG_ERROR([You need pdflatex (from texlive distribution)])
fi
AC_CHECK_PROGS(SWATH,swath,no)
AC_CHECK_PROGS(CTTEX,cttex,no)

AC_ARG_WITH(texmfdir,
  [AC_HELP_STRING([--with-texmfdir=DIR],
                  [texmf directory in DIR [PREFIX/share/texmf]])],
  [texmfdir="$withval"], [texmfdir=${datarootdir}/texmf])
AC_MSG_CHECKING(--with-texmfdir)
AC_MSG_RESULT("$texmfdir")                                                                                                           
AC_SUBST(texmfdir)

AC_PATH_PROG(TEXHASH,[mktexlsr texhash],no)
if test "x$TEXHASH" = "xno" ; then
  AC_MSG_ERROR([You need mktexlsr or texhash (from texlive distribution)])
fi

AC_ARG_WITH(emacsdir,
  [AC_HELP_STRING([--with-emacsdir=DIR],
                  [emacs directory in DIR [PREFIX/share/emacs]])],
  [emacsdir="$withval"], [emacsdir=${datarootdir}/emacs])
AC_MSG_CHECKING(--with-emacsdir)
AC_MSG_RESULT("$emacsdir")                                                                                                           
AC_SUBST(emacsdir)

AC_OUTPUT(Makefile
  babel/Makefile
  emacs/Makefile
  fonts/Makefile
  scripts/Makefile
  scripts/sync-thailatex
  doc/Makefile)

