AC_INIT(babel/thai.dtx)
AM_INIT_AUTOMAKE(thailatex, 0.4.5)

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_AWK
AC_PROG_SED
AC_CHECK_PROGS(RMDIR,rmdir,no)

AC_CHECK_PROGS(LATEX,latex,no)
if test "x$LATEX" = "xno" ; then
  AC_MSG_ERROR([You need latex (from texlive distribution)])
fi
AC_CHECK_PROGS(DVIPS,dvips,no)
if test "x$DVIPS" = "xno" ; then
  AC_MSG_ERROR([You need dvips (from texlive distribution)])
fi
AC_CHECK_PROGS(PF2AFM,pf2afm,no)
if test "x$PF2AFM" = "xno" ; then
  AC_MSG_ERROR([You need pf2afm (from ghostscript distribution)])
fi
AC_CHECK_PROGS(AFM2TFM,afm2tfm,no)
if test "x$AFM2TFM" = "xno" ; then
  AC_MSG_ERROR([You need afm2tfm (from texlive distribution)])
fi
AC_CHECK_PROGS(VPTOVF,vptovf,no)
if test "x$VPTOVF" = "xno" ; then
  AC_MSG_ERROR([You need vptovf (from texlive distribution)])
fi
AC_CHECK_PROGS(PS2PDF,ps2pdf,no)
if test "x$PS2PDF" = "xno" ; then
  AC_MSG_ERROR([You need ps2pdf (from ghostscipt distribution)])
fi
AC_CHECK_PROGS(SWATH,swath,no)
AC_CHECK_PROGS(CTTEX,cttex,no)
if test "x$SWATH" = "xno" && test "x$CTTEX" = "xno" ; then
  AC_MSG_WARN([You may need either swath or cttex (from corresponding package)])
fi

AC_ARG_WITH(texmfdir,
  [AC_HELP_STRING([--with-texmfdir=DIR],
                  [texmf directory in DIR [PREFIX/share/texmf]])],
  [texmfdir="$withval"], [texmfdir=${datarootdir}/texmf])
AC_MSG_CHECKING(--with-texmfdir)
AC_MSG_RESULT("$texmfdir")                                                                                                           
AC_SUBST(texmfdir)

dnl updmappath=`eval echo $PATH:$texmfdir/dvips/config`
dnl AC_PATH_PROG(UPDMAP,updmap,no,$updmappath)
AC_PATH_PROGS(UPDMAP,[updmap-sys updmap],no)
if test "x$UPDMAP" = "xno" ; then
  AC_MSG_ERROR([You need updmap-sys or updmap (from texlive distribution)])
fi

AC_PATH_PROG(TEXHASH,[mktexlsr texhash],no)
if test "x$TEXHASH" = "xno" ; then
  AC_MSG_ERROR([You need mktexlsr or texhash (from texlive distribution)])
fi

AC_ARG_WITH(emacsdir,
  [AC_HELP_STRING([--with-emacsdir=DIR],
                  [emacs directory in DIR [PREFIX/share/emacs]])],
  [emacsdir="$withval"], [emacsdir=${datarootdir}/emacs])
AC_MSG_CHECKING(--with-emacsdir)
AC_MSG_RESULT("$emacsdir")                                                                                                           
AC_SUBST(emacsdir)

AC_OUTPUT(Makefile
  babel/Makefile
  emacs/Makefile
  fonts/Makefile
  scripts/Makefile
  scripts/sync-thailatex
  doc/Makefile)

